examples/failing/DeclConflictTypeType.purs
-- @shouldFailWith DeclConflict
module Main where

data Fail

data Fail
